CMAKE_MINIMUM_REQUIRED(VERSION 3.17)
PROJECT(general)
SET(CMAKE_CXX_STANDARD 20)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

ADD_SUBDIRECTORY(ECS)
ADD_SUBDIRECTORY(Engine)
ADD_SUBDIRECTORY(Lua)
ADD_SUBDIRECTORY(RayLib)
ADD_SUBDIRECTORY(TerrainGenerator)
ADD_SUBDIRECTORY(XMLGenerator)